--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,13 @@ a {
     padding: 0 1rem;
     text-align: end;
     text-transform: uppercase;
+    text-decoration: none;
+}
+
+b {
+    color: #7BAEBF;
+    font-size: 10px;
+    text-transform: uppercase;
 }
 
 body {
@@ -59,7 +66,7 @@ p {
     text-align: center;
 }
 
-.col-3 {
+.col-3, .col-4 {
     border-right: 1px solid #7BAEBF;
 }
 
@@ -88,6 +95,12 @@ width: 100%;
 margin-bottom: 5%;
 }
 
+.projects_art {
+    width: 100%;
+    height: 9rem;
+    margin-bottom: 5%;
+    }
+
 .skill_row {
     padding-left: 25%;
     width: 90%;
@@ -104,14 +117,14 @@ margin-bottom: 5%;
 /* Ids */
 
 #about_img {
-    width: 30%;
+    width: 50%;
 }
 
 #backpack_img {
     opacity: 80%;
-    padding: 60% 0 0 60%;
+    padding: 80% 0 0 40%;
     position: relative;
-    width: 150%;
+    width: 110%;
 }
 
 #blueshape {
